--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Generador de Código con IA</h1>
-    <button id="login">Iniciar sesión</button>
+    <button id="login">Iniciar Clerk</button>
     <button id="logout" style="display:none;">Cerrar sesión</button>
   </header>
 
@@ -33,7 +33,6 @@
 
   <!-- Clerk -->
 <script async crossorigin src="https://cdn.clerk.dev/clerk.browser.js"></script>
-
  <script>
   window.Clerk.load({
     frontendApi: "TU_FRONTEND_API",
