--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Generador de Código con IA</h1>
-    <button id="login">Iniciar Clerk</button>
+    <button id="login">Clerk</button>
     <button id="logout" style="display:none;">Cerrar sesión</button>
   </header>
 
